--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-streamlit
+streamlit==1.51.0
+pandas==2.3.3
+numpy==2.3.4
+plotly==6.3.1
+openpyxl==3.1.5
+scikit-learn==1.6.1
+joblib==1.2.0
+matplotlib==3.10.0
+seaborn==0.12.2
+plotly.express
+altair
+pillow>=9.0.0
